--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.16.0",
     "react-router-hash-link": "^2.4.3",
     "react-tabs": "^6.0.2",
@@ -21,6 +23,7 @@
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-image-gallery": "^1.2.1",
     "@types/react-router-hash-link": "^2.4.7",
     "@vitejs/plugin-react": "^3.1.0",
     "css-loader": "^6.8.1",
