--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-gallery": "^1.3.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.16.0",
     "react-router-hash-link": "^2.4.3",
     "react-tabs": "^6.0.2",
