--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-router-hash-link": "^2.4.3",
     "react-tabs": "^6.0.2",
     "react-typed": "^1.2.0",
-    "reactjs-popup": "^2.0.6"
+    "reactjs-popup": "^2.0.6",
+    "sass": "^1.69.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
