--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-inview": "^4.5.0",
     "react-image-gallery": "^1.3.0",
     "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.16.0",
