--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "react-hook-inview": "^4.5.0",
     "react-image-gallery": "^1.3.0",
     "react-loading-skeleton": "^3.3.1",
+    "react-native": "^0.72.6",
+    "react-native-gesture-handler": "^2.13.4",
     "react-router-dom": "^6.16.0",
     "react-router-hash-link": "^2.4.3",
+    "react-swipeable": "^7.0.1",
     "react-tabs": "^6.0.2",
     "react-typed": "^1.2.0",
+    "react-use-gesture": "^9.1.3",
     "reactjs-popup": "^2.0.6",
     "sass": "^1.69.4"
   },
