--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-inview": "^4.5.0",
     "react-image-gallery": "^1.3.0",
     "react-loading-skeleton": "^3.3.1",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-helmet": "^6.1.8",
     "@types/react-image-gallery": "^1.2.1",
     "@types/react-router-hash-link": "^2.4.7",
     "@vitejs/plugin-react": "^3.1.0",
