--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-swipeable": "^7.0.1",
     "react-tabs": "^6.0.2",
-    "react-typed": "^1.2.0",
+    "react-type-animation": "^3.2.0",
     "react-use-gesture": "^9.1.3",
     "reactjs-popup": "^2.0.6",
     "sass": "^1.69.4"
