--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.1",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "framer-motion": "^10.16.4",
